test/1.2/errors/T_EDVAR.dml
/*
  © 2021-2022 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;

method init {
    /// ERROR EDVAR
    local int x;
    /// ERROR EDVAR
    local int x;

    /// ERROR EDVAR
    local int i;
    /// ERROR EDVAR
    local int i;

    /// ERROR EDVAR
    static int j;
    /// ERROR EDVAR
    static int j;
}
